# autonomes_fahren

./: .gitignore  README.md  camera_calibration.ipynb  flake.nix  pyproject.toml
src/autonomes_fahren/: __init__.py  camera.py  camera_calibration.py  stream.py  take_pictures.py
